--- a/styles/12-rock-paper-scissors-auto.css
+++ b/styles/12-rock-paper-scissors-auto.css
@@ -44,12 +44,12 @@ body {
   margin-top: 50px;
 }
 
-.reset-score-button {
+.reset-score-button,
+.auto-play-button  {
   background-color: white;
   border: none;
   font-size: 15px;
   padding: 8px 15px;
   cursor: pointer;
 }
-
 
